updated readme and added a swathe of options to the tomcat init script